Fix accidental selection of scores and table entries on mobile browsers when the nav dropdowns are visible

--- a/website/static/css/football/football.css
+++ b/website/static/css/football/football.css
@@ -15,6 +15,7 @@
     border-color: silver;
     border-radius: 0.5rem;
     background-color: hsl(219, 79%, 98%);
+    user-select: none;
 }
 
 .score-widget:hover {
