--- a/website/static/css/table.css
+++ b/website/static/css/table.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0rem 0.25rem;
+    user-select: none;
 }
 
 .header-data {
